--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html lang="pt-PT" class="no-js" itemtype="https://schema.org/WebPage" itemscope=""><head>
+	<meta name="facebook-domain-verification" content="zx0e2crnlej2dghqx04y0x3e9m0aj7" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<title>ERICK</title>
